# Capstone-Project-2023_2

./: .gitignore  .ignore  .justfile  README.md  config.toml  executer_demo.py  image  notes.md  pyproject.toml  undis.py  undis.spec  undis.spec.backup  undis_run.py
assets/: Empty-Image.xcf  Missing-Image.xcf  theme.json
examples/: imagga_tags.json
module/: ImagePreload.py  ModelLoad.py  SearchImage.py  SketchPreload.py  options.py
module/checkpoints/sketchy_ext/: best_checkpoint.pth
module/data_utils/: dataset.py  utils.py
module/model/: model.py  sa.py  sam_ViT-B_16.pth
undis/: Imagga.py  __main__.py  app.py  asset.py  color.py  component.py  config.py  draw_canvas.py  image_loader.py  result_frame.py  test.py  util.py  utils.py
undis/components/: image_button.py  result_frame.py
undis/module/: options.py
undis/module/data_utils/: dataset.py
undis/module/model/: rn.py  sa.py
undis/module/utils/: loss.py
undis/sbir_mod/: ModelLoad.py
undis/sbir_mod/data_utils/: utils.py
undis/sbir_mod/model/: ca.py  model.py  sa.py
undis/sbir_mod/utils/: ap.py
