[tool.poetry]
name = "undis"
version = "0.1.0"
description = ""
authors = ["ToroidalFox <93528864+ToroidalFox@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
pdoc = "^14.1.0"
typing-extensions = "^4.8.0"
pillow = "^10.1.0"
pyinstaller = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
