[tool.poetry]
name = "undis"
version = "0.1.0"
description = ""
authors = ["ToroidalFox <93528864+ToroidalFox@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
pdoc = "^14.1.0"
typing-extensions = "^4.8.0"
pyinstaller = "^6.2.0"
customtkinter = "^5.2.1"
torchvision = "^0.16.1"
torchaudio = "^2.1.1"
einops = "^0.7.0"
opencv-python = "^4.8.1.78"
numpy = "^1.26.2"
joblib = "^1.3.2"
tensorboardx = "^2.6.2.2"
torch = "^2.1.1"
scipy = "^1.11.4"
ghostscript = "^0.7"
pillow = "^10.1.0"

[tool.ruff]
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
