[tool.poetry]
name = "undis"
version = "0.1.0"
description = ""
authors = ["ToroidalFox <93528864+ToroidalFox@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pdoc = "^14.1.0"
typing-extensions = "^4.8.0"
pyinstaller = "^6.2.0"
customtkinter = "^5.2.1"
einops = "^0.7.0"
opencv-python = "^4.8.1.78"
numpy = "^1.26.2"
joblib = "^1.3.2"
tensorboardx = "^2.6.2.2"
torch = {url = "https://download.pytorch.org/whl/cu121/torch-2.1.0%2Bcu121-cp311-cp311-win_amd64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu121/torchvision-0.16.0%2Bcu121-cp311-cp311-win_amd64.whl"}
torchaudio = {url = "https://download.pytorch.org/whl/cu121/torchaudio-2.1.0%2Bcu121-cp311-cp311-win_amd64.whl"}
scipy = "^1.11.4"
ghostscript = "^0.7"
pillow = "^10.1.0"

[tool.ruff]
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
